--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,23 @@
-# History files
+# History file
 .Rhistory
-.Rapp.history
+.Rapp.histoy
 
-# Session Data files
+# Session data files
 .RData
+.Rproj
 
 # User-specific files
-.Ruserdata
+.Ruser.data
 
-# Example code in package build process
-*-Ex.R
+# Large nexoid data file.  (Need to save local copy.)
+nexoid-validation/data-wrangling-nexoid/
 
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
+# Rmarkdown knit
+.html
+.Rproj.user
 
 # R Environment Variables
 .Renviron
 
-# A paper that I've temporarily stored for reference.
-/drafts/reference-paper.docx
+# Add some data files.
+nexoid-validation/data-clean/data_clean_nexoid_all.csv
