--- a/_deploy_buildspec.yaml
+++ b/_deploy_buildspec.yaml
@@ -13,7 +13,7 @@ phases:
   build:
     commands:
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
+      - docker build -f web.Dockerfile -t $REPOSITORY_URI:latest .
       - echo Tagging the Docker image...
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
 
