changes in docker commands

--- a/_deploy_buildspec.yaml
+++ b/_deploy_buildspec.yaml
@@ -28,6 +28,7 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file used during deployment to pick new tasks ...
-      - printf '{"ImageURI":"%s:%s"}' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
+      - printf '[{"name":"Shiny-Container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+
 artifacts:
-  files: imageDetail.json
+  files: imagedefinitions.json
