--- a/_deploy_buildspec.yaml
+++ b/_deploy_buildspec.yaml
@@ -7,7 +7,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - REPOSITORY_URI=319273870782.dkr.ecr.us-east-1.amazonaws.com/covid-risk-score
+      - REPOSITORY_URI=${ContainerRepositoryName}
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
