--- a/_deploy_buildspec.yaml
+++ b/_deploy_buildspec.yaml
@@ -17,9 +17,10 @@ phases:
       - paramname=$(aws ssm get-parameter --name $apiKey  --query "Parameter.Name" --output text)
       - paramvalue=$(aws ssm get-parameter --name $apiKey --query "Parameter.Value" --output text)
       - result=${paramname}=${paramvalue} >.Renviron
-      - docker build -f web.Dockerfile -t $REPOSITORY_URI:latest .
-      - echo Tagging the Docker image...
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - cat .Renviron
+   #   - docker build -f web.Dockerfile -t $REPOSITORY_URI:latest .
+   #   - echo Tagging the Docker image...
+    #  - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   
   post_build:
     commands:
