debugging api key

--- a/_deploy_buildspec.yaml
+++ b/_deploy_buildspec.yaml
@@ -21,8 +21,9 @@ phases:
       - echo $result
       - echo $result >.Renviron
       - cat .Renviron
+      - find . -name .Renviron
       - pwd
-      - ls
+    
    #   - docker build -f web.Dockerfile -t $REPOSITORY_URI:latest .
    #   - echo Tagging the Docker image...
     #  - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
@@ -36,5 +37,5 @@ phases:
     #  - echo Writing image definitions file used during deployment to pick new tasks ...
     #  - printf '[{"name":"Shiny-Container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
-artifacts:
-  files: imagedefinitions.json
+#artifacts:
+ # files: imagedefinitions.json
