--- a/_deploy_buildspec.yaml
+++ b/_deploy_buildspec.yaml
@@ -37,5 +37,6 @@ phases:
     #  - echo Writing image definitions file used during deployment to pick new tasks ...
     #  - printf '[{"name":"Shiny-Container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
-#artifacts:
+artifacts:
  # files: imagedefinitions.json
+  files: '**/*'
