--- a/_deploy_buildspec.yaml
+++ b/_deploy_buildspec.yaml
@@ -18,20 +18,16 @@ phases:
       - paramvalue=$(aws ssm get-parameter --name $apiKey --query "Parameter.Value" --output text)
       - result=${paramname}=${paramvalue}
       - echo -n $result > .Renviron
-    
-   #   - docker build -f web.Dockerfile -t $REPOSITORY_URI:latest .
-   #   - echo Tagging the Docker image...
-    #  - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -f web.Dockerfile -t $REPOSITORY_URI:latest .
+      - echo Tagging the Docker image...
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   
   post_build:
-    commands:
-      # - echo Test docker image 
-      # - docke run -p 3838:3838 $REPOSITORY_URI:$IMAGE_TAG
-    #  - echo Pushing the Docker images...
-    #  - docker push $REPOSITORY_URI:$IMAGE_TAG
-    #  - echo Writing image definitions file used during deployment to pick new tasks ...
-    #  - printf '[{"name":"Shiny-Container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+    commands:       
+      - echo Pushing the Docker images...
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo Writing image definitions file used during deployment to pick new tasks ...
+      - printf '[{"name":"Shiny-Container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
 artifacts:
- # files: imagedefinitions.json
-  files: '**/*'
+  files: imagedefinitions.json
