added sns topic

--- a/aws-infrastructure/codepipeline_setup_all_ecs_resources.yaml
+++ b/aws-infrastructure/codepipeline_setup_all_ecs_resources.yaml
@@ -462,6 +462,8 @@ Resources:
             - ssm:DescribeParameters
             - ssm:GetParameters
             - ssm:AddTagsToResource
+            - sns:ListTopics
+            - sns:Publish
           Resource: "*"
       Roles:
         - !Ref CodeBuildRole
