added env variable to store account id for base image

--- a/aws-infrastructure/codepipeline_setup_all_ecs_resources.yaml
+++ b/aws-infrastructure/codepipeline_setup_all_ecs_resources.yaml
@@ -419,6 +419,9 @@ Resources:
         - Name: S3CodeArtifactBucket
           Type: PLAINTEXT
           Value: !Ref CodeArtifactBucket
+        - Name: BaseImageAccountId
+          Type: PLAINTEXT
+          Value: !Sub ${AWS::AccountId}
       Source:
         Type: CODEPIPELINE
         BuildSpec: !Ref BuildSpecLoc
