--- a/aws-infrastructure/codepipeline_setup_all_ecs_resources.yaml
+++ b/aws-infrastructure/codepipeline_setup_all_ecs_resources.yaml
@@ -421,7 +421,7 @@ Resources:
           Value: !Ref CodeArtifactBucket
         - Name: BaseImageAccountId
           Type: PLAINTEXT
-          Value: !Sub ${AWS::AccountId}
+          Value: !Sub '${AWS::AccountId}'
       Source:
         Type: CODEPIPELINE
         BuildSpec: !Ref BuildSpecLoc
@@ -612,7 +612,7 @@ Resources:
 Outputs:
   PipelineUrl:
     Value: !Sub https://console.aws.amazon.com/codepipeline/home?region=${AWS::Region}#/view/${CodePipeline}
-    Description: Codepipeline URL
+    Description: Codepipeline location
     Export:
         Name: !Sub ${AWS::StackName}-CodePipeline
 
